OOT-1741: Issue page - main functionality - handled main part of project page - created controller, template with output of main info and activity block - added macro for issue anchor generation - covered by tests added controller - fixed bug with hidden list of issue from admin at main page

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -3,8 +3,12 @@ body {
     padding-bottom: 30px;
 }
 
-.single_project .jumbotron p {
+body .jumbotron p {
     font-size: 17px;
+}
+
+body .row.block.is-empty td {
+    border-top: none;
 }
 
 body.login {
